# yolov5_deepsort_ros

./: CMakeLists.txt  README.md  package.xml
include/: cv_detection.hpp  deepsort.hpp  simple_yolo.hpp
launch/: cv_detection.launch
src/: cv_detection.cpp  deepsort.cpp  main.cpp  simple_yolo.cu
