<?xml version="1.0"?>
<package format="2">
  <name>cv_detection</name>
  <version>0.0.1</version>
  <description>The cv_detection package for usv</description>

  <maintainer email="jzx@todo.todo">hywel</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
